Se agrego endpoint para post section y post certification
